customize scrollbar and fix empty array issues on localstore

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,7 @@ header {
   justify-content: row;
   align-items: stretch;
 }
+
+button {
+  outline: none;
+}
